Fix color of spinner in dark mode

--- a/static/css/comments.css
+++ b/static/css/comments.css
@@ -78,4 +78,8 @@
   .comments__expandBtn__label {
     color: #fff
   }
+  .spinner:after {
+    border: 3px solid #fff;
+    border-color: #fff transparent #fff transparent;
+  }
 }
